openwebrx (1.2.44) bullseye jammy; urgency=low

  * Added Storage API for creating files that avoids name collisions.
  * Added admin-configurable FAX LPM parameter (default is 120).
  * Added reference to documentation to the console window.
  * Added maidenhead layer to Leaflet-based maps.
  * Fixed volume resetting to zero on page reload.
  * Fixed step tuning when waterfall is zoomed.
  * Fixed browser console error on vendor-provided markers.
  * Increased upper limit on aircraft data retention to 100000 seconds.

 -- Marat Fayzullin <luarvique@gmail.com>  Thu, 11 Jan 2024 16:12:00 +0000

openwebrx (1.2.43) bullseye jammy; urgency=low

  * Added support for JS plugins developed by Stanislav Lechev.
  * Added option to switch between US and EU RDS decoding.
  * Added option to show dits and dahs when decoding CW.
  * Refactored and improved CW, SITOR-B, and CCIR476 decoders.
  * Reorganized "Demodulation and Decoding" settings page.
  * Fixed info bubble not updating in Google map.
  * Fixed resizing RDS display on mobile devices.  
  * Fixed date/time parsing in RDS display.
  * Fixed CW decoder to print underscores for unrecognized characters.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 18 Dec 2023 16:12:00 +0000

openwebrx (1.2.42) bullseye jammy; urgency=low

  * Added broadcast FM RDS decoder, using Redsea.
  * Added bind_address core configuration parameter.
  * Descreased SDR initialization retry time to 15 seconds.
  * Stopped some failed sources from restarting indefinitely.
  * Enabled nano-scroller in relevant panels on startup.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 9 Dec 2023 16:12:00 +0000

openwebrx (1.2.41) bullseye jammy; urgency=low

  * Added message broadcasting function for admin.
  * Added ability to disable chat between clients.
  * Fixed Settings crash when a client has no SDR selected.
  * Fixed colors resetting when tuning outside profile.
  * Leaflet map now saves map and layer selections.
